--- a/config/gen_answer_config.yaml
+++ b/config/gen_answer_config.yaml
@@ -5,12 +5,8 @@ bench_name: arena-hard-v0.1
 temperature: 0.0
 max_tokens: 2048
 num_choices: 1
+repetition_penalty: 1.1
 
 # a list of model to generate answers
 model_list:
-  - gpt-3.5-turbo-0125
-  - gpt-4-1106-preview
-  - gigachat_lite
-  - gigachat_pro
-  - gpt-4o-mini
-  - gpt-3.5-turbo-1106
+  - saiga_llama3_8b_v7_no_system
